--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/app/environments/environment.prod.ts",
+                  "with": "src/app/environments/environment.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
